[package]
name = "fring"
version = "1.0.0"
edition = "2021"
authors = ["David Lawrence <dlaw@dlaw.me>"]
license = "MIT"
repository = "https://github.com/dlaw/fring/"
description = "Lightweight, no_std, and *fast* ring buffer"
categories = ["embedded", "no-std", "memory-management"]
keywords = ["ringbuffer"]
