[package]
name = "fring"
version = "0.4.0"
edition = "2024"
authors = ["David Lawrence <dlaw@dlaw.me>"]
license = "MIT"
repository = "https://github.com/dlaw/fring/"
description = "Lightweight, no_std, and *fast* ring buffer"
categories = ["embedded", "no-std", "memory-management"]
keywords = ["ringbuffer"]
